Lisätty kaksi nappia ja niille toiminnallissus, lisätty README

--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>CuteDogs</title>
 </head>
 <body>
     <div class="container">
@@ -18,7 +18,11 @@
             <img id="image">
         </div>
 
-        <button id="btnClick">CLICK HERE!</button>
+        <button id="btnClick">Random!</button>
+
+        <button id="labrador">Labrador</button>
+        
+        <button id="husky">Husky</button>
     </div>
 
     <script src="koira.js"></script>
